--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="/know_style.css">
+  <link rel="stylesheet" href="know_style.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
       <div class="logo" style="display: flex;">
-        <img src="/know1.jpg" alt=""
+        <img src="know1.jpg" alt=""
           style="height: 2.6rem; width: 8rem; border-radius: 0.5rem;">&nbsp;<span>Knowledge
           Park Creative School</span>
       </div>
@@ -45,13 +45,13 @@
       <h2>At knowledge Park School , we believe that every child holds the power to shape the future. Our mission is to unlock that potential by providing a nurturing environment where students thrive academically, socially and Creatively.</h2>
     </div>
     <!-- <h1>Welcome to Knowledge Park Public School</h1>                           -->
-    <img src="/kid1.jpg" alt="">
+    <img src="kid1.jpg" alt="">
   </div>
   <section class="section" id="about">
     <h1>Why Choose Knowledge Park School ?</h1>
     <div class="about-section">
       <div class="about-img">
-        <img src="/kid1.jpg" style="height: 18rem; width: 12rem; border-radius: 5rem; box-shadow: 0.5rem 0.5rem 3rem white;" alt="School Building">
+        <img src="kid1.jpg" style="height: 18rem; width: 12rem; border-radius: 5rem; box-shadow: 0.5rem 0.5rem 3rem white;" alt="School Building">
       </div>
       <div class="about-text">
         <h3>We are more than just a school --
@@ -160,14 +160,14 @@
   </section>
   <footer>
     <marquee class='marquee' behavior="" direction="">
-      <img src="/know.jpg" alt="">
-      <img src="/know1.jpg" alt="">
-      <img src="/know.jpg" alt="">
-      <img src="/know1.jpg" alt="">
-      <img src="/know.jpg" alt="">
-      <img src="/know1.jpg" alt="">
-      <img src="/know.jpg" alt="">
-      <img src="/know1.jpg" alt="">
+      <img src="know.jpg" alt="">
+      <img src="know1.jpg" alt="">
+      <img src="know.jpg" alt="">
+      <img src="know1.jpg" alt="">
+      <img src="know.jpg" alt="">
+      <img src="know1.jpg" alt="">
+      <img src="know.jpg" alt="">
+      <img src="know1.jpg" alt="">
     </marquee>
     <p>&copy; 2025 Knowledge Park Public School</p>
     <p>Designed By | MD ADIL</p>
