--- a/index.html
+++ b/index.html
@@ -57,13 +57,90 @@
         <h3>We are more than just a school --
           we are a vibrant learning community commited to excellance. invovation and character-building.Our well-rounded curriculum blends traditionals values with modern teaching methodologies, empowering students to become confident thinkers, compassionate leaders and lifeling learners.
         </h3>
-          <!-- <h3>Our Mission</h3>
-        <li>Deliver hight-quality education that fosters critical thinking and creativity.</li>
-        <li>Promote ethical values and inclusive learning.</li>
-        <li>Encourage collaboration between students,teachers and parents.</li>
-        <p>we believe that education is the most powerful tool to shape a better future .Our goal is to provide students
-          with a safe, nurturing, and intellectually stimulating environment</p> -->
       </div>
+      <h1>Our Cources</h1>
+    <div class="about-section" style="padding:2rem">
+      <div class="box-1">
+        <div class="box-2">
+          <h2>ART</h2>
+          <p>Cutting edge technology and innovation are linked.</p>
+        </div>
+      </div>
+      <div class="box-1">
+        <div class="box-2">
+          <h2>LANGUAGES</h2>
+          <p>Experiance the joy of learning different languages.</p>
+        </div>
+      </div>
+      <div class="box-1">
+        <div class="box-2">
+          <h2>MATHS</h2>
+          <p>Mathematics will sharp your mind like exercise sharps you body.</p>
+        </div>
+      </div>
+      <div class="box-1">
+        <div class="box-2">
+          <h2>SCIENCE</h2>
+          <p>Re-examine your view on technology's place.</p>
+        </div>
+      </div>
+
+      <div class="box-1">
+        <div class="box-2">
+          <h2>HISTORY</h2>
+          <p>To know the past is to understand the present.</p>
+        </div>
+      </div>
+
+      <div class="box-1">
+        <div class="box-2">
+          <h2>GEOGRAPHY</h2>
+          <p>Geography is where life and land meet.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+    <section class="section" id="about">
+    <h1>Discover our Top school child Benefits</h1>
+    <div class="about-section" style="padding:2rem">
+        <div class="box-1" >
+          <div class="box-2">
+          <h2>PROGRAMS</h2>
+          <p>Support for good academincs </p>
+        </div>
+        </div>
+       <div class="box-1" >
+          <div class="box-2">
+          <h2>STAFF</h2>
+          <p>Well qualified staff and teachers. </p>
+        </div>
+        </div>
+
+         <div class="box-1" >
+          <div class="box-2">
+          <h2>COURCES</h2>
+          <p>A good educate should be available.</p>
+        </div>
+        </div>
+
+         <div class="box-1" >
+          <div class="box-2">
+          <h2>SCHOOL</h2>
+          <p>Well funnished building blocks</p>
+        </div>
+        </div>    
+        <div class="box-1" >
+          <div class="box-2">
+          <h2>EVENTS</h2>
+          <p>Events to Encourage students.</p>
+        </div>
+        </div> 
+        <div class="box-1" >
+          <div class="box-2">
+          <h2>SPORTS</h2>
+          <p>Sucess in sports begins with self-belief.</p>
+        </div>
+        </div> 
     </div>
   </section>
   <section class="section" id="about">
