--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <h2>Contact Us</h2>
     <div class="contact-section">
       <div class="contact-info">
-        <p><strong>Address:</strong> Knowledge Park Public School, Main Street, Springfield, 123456</p>
+        <p><strong>Address:</strong> Knowledge Park Public School, Azam colony, Basavakalyan, 585327</p>
         <p><strong>Phone:</strong> +91-9876543210</p>
         <p><strong>Email:</strong> info@sunriseschool.edu</p>
         <p><strong>Office Hours:</strong> Mon - Fri, 8:00 AM - 4:00 PM</p>
