--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  <!-- <img src="backgroundimg.jpg" alt=""> -->
   <header class="header">
     <div class="icon">
       <div onclick="myFunction()" id="menu-btn" class="fas fa-bars"></div>
@@ -42,23 +43,30 @@
   <div class="hero1">
     <div class="text">
       <h1>"Where Curiosity meets excellance."</h1>
-      <h2>At knowledge Park School , we believe that every child holds the power to shape the future. Our mission is to unlock that potential by providing a nurturing environment where students thrive academically, socially and Creatively.</h2>
+      <h2>At knowledge Park School , we believe that every child holds the power to shape the future. Our mission is to
+        unlock that potential by providing a nurturing environment where students thrive academically, socially and
+        Creatively.</h2>
     </div>
-    <!-- <h1>Welcome to Knowledge Park Public School</h1>                           -->
     <img src="kid1.jpg" alt="">
   </div>
   <section class="section" id="about">
     <h1>Why Choose Knowledge Park School ?</h1>
     <div class="about-section">
       <div class="about-img">
-        <img src="kid1.jpg" style="height: 18rem; width: 12rem; border-radius: 5rem; box-shadow: 0.5rem 0.5rem 3rem white;" alt="School Building">
+        <img src="kid1.jpg"
+          style="height: 18rem; width: 12rem; border-radius: 5rem; box-shadow: 0.5rem 0.5rem 3rem white;"
+          alt="School Building">
       </div>
       <div class="about-text">
         <h3>We are more than just a school --
-          we are a vibrant learning community commited to excellance. invovation and character-building.Our well-rounded curriculum blends traditionals values with modern teaching methodologies, empowering students to become confident thinkers, compassionate leaders and lifeling learners.
+          we are a vibrant learning community commited to excellance. invovation and character-building.Our well-rounded
+          curriculum blends traditionals values with modern teaching methodologies, empowering students to become
+          confident thinkers, compassionate leaders and lifeling learners.
         </h3>
       </div>
-      <h1>Our Cources</h1>
+    </div>
+
+    <h1>Our Cources</h1>
     <div class="about-section" style="padding:2rem">
       <div class="box-1">
         <div class="box-2">
@@ -100,47 +108,47 @@
       </div>
     </div>
   </section>
-    <section class="section" id="about">
+  <section class="section" id="about">
     <h1>Discover our Top school child Benefits</h1>
     <div class="about-section" style="padding:2rem">
-        <div class="box-1" >
-          <div class="box-2">
+      <div class="box-1">
+        <div class="box-2">
           <h2>PROGRAMS</h2>
           <p>Support for good academincs </p>
         </div>
-        </div>
-       <div class="box-1" >
-          <div class="box-2">
+      </div>
+      <div class="box-1">
+        <div class="box-2">
           <h2>STAFF</h2>
           <p>Well qualified staff and teachers. </p>
         </div>
-        </div>
+      </div>
 
-         <div class="box-1" >
-          <div class="box-2">
+      <div class="box-1">
+        <div class="box-2">
           <h2>COURCES</h2>
           <p>A good educate should be available.</p>
         </div>
-        </div>
+      </div>
 
-         <div class="box-1" >
-          <div class="box-2">
+      <div class="box-1">
+        <div class="box-2">
           <h2>SCHOOL</h2>
           <p>Well funnished building blocks</p>
         </div>
-        </div>    
-        <div class="box-1" >
-          <div class="box-2">
+      </div>
+      <div class="box-1">
+        <div class="box-2">
           <h2>EVENTS</h2>
           <p>Events to Encourage students.</p>
         </div>
-        </div> 
-        <div class="box-1" >
-          <div class="box-2">
+      </div>
+      <div class="box-1">
+        <div class="box-2">
           <h2>SPORTS</h2>
           <p>Sucess in sports begins with self-belief.</p>
         </div>
-        </div> 
+      </div>
     </div>
   </section>
   <section class="section" id="about">
@@ -228,7 +236,7 @@
     <h2>Contact Us</h2>
     <div class="contact-section">
       <div class="contact-info">
-        <p><strong>Address:</strong> Knowledge Park Public School, Azam colony, Basavakalyan, 585327</p>
+        <p><strong>Address:</strong> Knowledge Park Public School, Main Street, Springfield, 123456</p>
         <p><strong>Phone:</strong> +91-9876543210</p>
         <p><strong>Email:</strong> info@sunriseschool.edu</p>
         <p><strong>Office Hours:</strong> Mon - Fri, 8:00 AM - 4:00 PM</p>
@@ -260,12 +268,6 @@
       x.style.display = 'none';
     }
   }
-
-  // let navbar=document.querySelector('.header .navbar');
-  // document.querySelector('#menu-btn').onclick=()=>{
-  //   navbar.classList.toggle('active');
-  //   console.log('adil')
-  // }
 </script>
 
 </html>
